<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="20dp"
    android:layout_marginTop="30dp"
    tools:context=".InfoFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/title_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info_about"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textAlignment="textStart"
        android:textAllCaps="true"
        android:textSize="16sp"
        android:fontFamily="@font/gothamssm_bold"
        android:textColor="?attr/title_color"/>
    <TextView
        android:id="@+id/about_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/info_text"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/title_one"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textSize="12sp"
        android:fontFamily="@font/gothamssm_book"
        android:textColor="?attr/body_color"/>
    <TextView
        android:id="@+id/title_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info_title_two"
        app:layout_constraintTop_toBottomOf="@id/about_text"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textAlignment="textStart"
        android:layout_marginTop="30dp"
        android:textSize="18sp"
        android:fontFamily="@font/gothamssm_bold"
        android:textColor="?attr/title_color" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_two"
        android:layout_marginTop="20dp">

        <ImageView
            android:id="@+id/dtt_banner"
            android:contentDescription="@string/info_image_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/dtt_banner"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintLeft_toRightOf="@id/dtt_banner"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">
            <TextView
                android:id="@+id/made_by"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/made_by"
                android:textColor="?attr/body_color"
                android:fontFamily="@font/gothamssm_book"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/url"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/gothamssm_book"
                android:text="@string/dtt_url"
                android:textSize="12sp"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>