<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".HomeFragment"
    android:background="@color/light_gray">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/overview_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/overview_title"
                android:layout_marginTop="30dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textAllCaps="true"
                android:textColor="@color/strong"
                android:layout_marginHorizontal="20dp"
                 />

            <RelativeLayout
                android:id="@+id/search_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/overview_title"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp">

                <EditText
                    android:id="@+id/search_field"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:hint="@string/search_placeholder"
                    android:background="@color/dark_gray"
                    android:textColorHint="@color/light"
                    android:inputType="textNoSuggestions"
                    android:paddingHorizontal="10dp" />

                <ImageButton
                    android:id="@+id/search_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/ic_search"
                    android:layout_centerVertical="true"
                    android:layout_margin="5dp"
                    android:contentDescription="@string/search_button"/>

            </RelativeLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/overview_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/search_wrapper"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="20dp"
                android:nestedScrollingEnabled="false" />

            <ImageView
                android:id="@+id/no_results_image"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:layout_marginHorizontal="20dp"
                android:src="@drawable/search_state_empty"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/overview_list"
                android:visibility="gone"/>
            <TextView
                android:id="@+id/no_results_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_results"
                app:layout_constraintTop_toBottomOf="@id/no_results_image"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:textAlignment="center"
                android:visibility="gone"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>