<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".DetailsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_constraintTop_toTopOf="parent" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/details_back_button"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/ic_back"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />
            <ImageView
                android:id="@+id/details_image"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:contentDescription="@string/details_image"
                android:scaleType="centerCrop"
                />
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/details_image"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginTop="-20dp"
                app:cardCornerRadius="20dp"
                android:elevation="0dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingHorizontal="20dp"
                    android:paddingVertical="40dp">

                    <TextView
                        android:id="@+id/details_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:textStyle="bold"
                        android:textSize="18sp" />
                    <TextView
                        android:id="@+id/details_bedroom"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintRight_toLeftOf="@id/details_bathroom"
                        app:layout_constraintTop_toTopOf="parent"
                        app:drawableLeftCompat="@drawable/ic_bed"
                        android:gravity="center_vertical"
                        android:textSize="8sp"
                        android:textColor="@color/medium"
                        app:drawableTint="@color/medium" />
                    <TextView
                        android:id="@+id/details_bathroom"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintRight_toLeftOf="@id/details_layers"
                        app:layout_constraintTop_toTopOf="parent"
                        app:drawableLeftCompat="@drawable/ic_bath"
                        android:gravity="center_vertical"
                        android:textSize="8sp"
                        android:textColor="@color/medium"
                        app:drawableTint="@color/medium" />
                    <TextView
                        android:id="@+id/details_layers"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintRight_toLeftOf="@id/details_distance"
                        app:layout_constraintTop_toTopOf="parent"
                        app:drawableLeftCompat="@drawable/ic_layers"
                        android:gravity="center_vertical"
                        android:textSize="8sp"
                        android:textColor="@color/medium"
                        app:drawableTint="@color/medium" />
                    <TextView
                        android:id="@+id/details_distance"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:drawableLeftCompat="@drawable/ic_location"
                        android:gravity="center_vertical"
                        android:textSize="8sp"
                        android:textColor="@color/medium"
                        app:drawableTint="@color/medium" />
                    <TextView
                        android:id="@+id/description_header"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/details_description"
                        app:layout_constraintTop_toBottomOf="@id/details_price"
                        app:layout_constraintLeft_toLeftOf="parent"
                        android:layout_marginTop="40dp"
                        android:textStyle="bold"
                        android:textSize="16sp"/>
                    <TextView
                        android:id="@+id/description_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/description_header"
                        android:layout_marginTop="20dp"
                        android:textSize="12sp"/>
                    <TextView
                        android:id="@+id/location_header"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@id/description_text"
                        app:layout_constraintLeft_toLeftOf="parent"
                        android:text="@string/details_location"
                        android:layout_marginTop="20dp"
                        android:textStyle="bold"
                        android:textSize="16sp" />

                    <RelativeLayout
                        android:id="@+id/relativeLayout"
                        android:layout_width="match_parent"
                        android:layout_height="300dp"
                        app:layout_constraintTop_toBottomOf="@id/location_header"
                        app:layout_constraintLeft_toLeftOf="parent"
                        android:layout_marginTop="20dp"
                        android:clickable="true"
                        android:focusable="true">
                        <androidx.fragment.app.FragmentContainerView
                            android:id="@+id/mapView"
                            android:name="com.google.android.gms.maps.SupportMapFragment"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            tools:context="com.example.mapwithmarker.MapsMarkerActivity" />
                    </RelativeLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>